2. Парсинг HTML страницы. [#260358 #484735] - correction